Bug 499272 - Minimized Kate Window can not be restored
Summary: Minimized Kate Window can not be restored
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 22.12.3
Platform: macOS (DMG) macOS
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-29 10:55 UTC by ronaldotto
Modified: 2025-04-13 12:34 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ronaldotto 2025-01-29 10:55:05 UTC
SUMMARY

Once I minimize a Window, I can not restore it again.

Note that it might be that this bug depends on MacOS Spaces and the MacOS version. I can reproduce it at least if "Spaces" are active.

STEPS TO REPRODUCE
1. In one Space, open Kate.
2. Minimize the Kate Window
3.  Do some work in a different MacOS Space
4. Switch back to Kate

OBSERVED RESULT

I see on top of the screen the Kate Menu bar, but not the Kate Window itself.

EXPECTED RESULT

To see the Kate Window so that I can continue editing.


SOFTWARE/OS VERSIONS
macOS: 12.7.3

ADDITIONAL INFORMATION

The error could be due to an incorrect use of the MacOS API. Some other applications provide in the menu bar an entry named "Window", from which one can restore such a "lost" window.
Comment 1 Waqar Ahmed 2025-01-29 10:57:24 UTC
You are using a super old version of Kate. Can you try a newer version? https://kate-editor.org/get-it/
Comment 2 ronaldotto 2025-01-29 12:06:37 UTC
(In reply to Waqar Ahmed from comment #1)
> You are using a super old version of Kate. Can you try a newer version?
> https://kate-editor.org/get-it/

The most recent version on this get-it site is broken, at least on MacOS Monterey.

It is master-8881, and when I want to start it, I get the error message

      “kate.app” can’t be opened because Apple cannot check it for malicious software.

Is there somewhere an archive of older Kate version, which I could try?
Comment 3 Christoph Cullmann 2025-01-29 12:30:30 UTC
You need no add an exception in the security settings, but Apple hides that well, that is independent of the Kate build version.
Comment 4 ronaldotto 2025-01-29 12:53:05 UTC
(In reply to Christoph Cullmann from comment #3)
> You need no add an exception in the security settings, but Apple hides that
> well, that is independent of the Kate build version.

You don't know by chance how to do it? It doesn't seem to be in the context menu of finder. 

I just wonder why this happens only with Kate. I have installed plenty of programs via a dmg file, and never experienced this problem.
Comment 5 ronaldotto 2025-01-29 12:58:57 UTC
Just found it. It is from the apple menu to "System Preferences", then "Security and Privacy", and then the tab sying "General". One has to click on the lock symbol, before changes can be made.
Comment 6 ronaldotto 2025-01-29 12:59:47 UTC
Just found it. It is from the apple menu to "System Preferences", then "Security and Privacy", and then the tab sying "General". One has to click on the lock symbol, before changes can be made.
Comment 7 ronaldotto 2025-01-29 14:54:24 UTC
I have installed the newest Kate version (25.03.70) and the bug is exactly the same.
Comment 8 Bug Janitor Service 2025-02-13 03:46:39 UTC
🐛🧹 ⚠️ This bug has been in NEEDSINFO status with no change for at least 15 days. Please provide the requested information, then set the bug status to REPORTED. If there is no change for at least 30 days, it will be automatically closed as RESOLVED WORKSFORME.

For more information about our bug triaging procedures, please read https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging.

Thank you for helping us make KDE software even better for everyone!
Comment 9 ronaldotto 2025-02-13 10:43:40 UTC
(In reply to Bug Janitor Service from comment #8)
> 🐛🧹 ⚠️ This bug has been in NEEDSINFO status with no change for at least 15
> days. Please provide the requested information, then set the bug status to
> REPORTED. If there is no change for at least 30 days, it will be
> automatically closed as RESOLVED WORKSFORME.
> 
> For more information about our bug triaging procedures, please read
> https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging.
> 
> Thank you for helping us make KDE software even better for everyone!

The problem is also reproducible with Kate 25.03.70

Is there any additional information I can provide?
Comment 10 ronaldotto 2025-02-14 14:01:25 UTC
Why is this set to "FIXED"? What has been fixed?
Comment 11 Christoph Cullmann 2025-02-14 15:02:06 UTC
Guess that was an accident, if that still happens with the current build, the minimized issue, we can re-open this.
Comment 12 ronaldotto 2025-02-14 15:22:42 UTC
Well, as I wrote, I *do* have the most recent version (just downloaded it again for the safe side), but I have now a new finding:

The problem occurs only if I move back to Kate using the task switcher (Command+Tab on MacOS). If I instead click on the Kate icon in my Dock, the Window gets restored.
Comment 13 Christoph Cullmann 2025-02-14 16:03:56 UTC
(In reply to ronaldotto from comment #12)
> Well, as I wrote, I *do* have the most recent version (just downloaded it
> again for the safe side), but I have now a new finding:
> 
> The problem occurs only if I move back to Kate using the task switcher
> (Command+Tab on MacOS). If I instead click on the Kate icon in my Dock, the
> Window gets restored.

Hmm, then I don't know if we can adjust that or this needs to be reported upstream to Qt.
Comment 14 ronaldotto 2025-02-17 10:15:21 UTC
(In reply to Christoph Cullmann from comment #13)
> (In reply to ronaldotto from comment #12)
> > Well, as I wrote, I *do* have the most recent version (just downloaded it
> > again for the safe side), but I have now a new finding:
> > 
> > The problem occurs only if I move back to Kate using the task switcher
> > (Command+Tab on MacOS). If I instead click on the Kate icon in my Dock, the
> > Window gets restored.
> 
> Hmm, then I don't know if we can adjust that or this needs to be reported
> upstream to Qt.

This I don't know either, but I believe that there is something in the design of the Kate UI which can help here:

My guess is that it is basically a problem of MacOS, that, if you use the task switcher to switch to an application which "belongs“ to a different apple space, the windows are not always recreated. Therefore, many applications  (in particular text editors) provide in the window bar an entry typically saying "Window", and when you click on it you get a list of all open windows managed by this application, and clicking on the respective window, the window gets restored. This at least would be a suitable workaround.
Comment 15 Bug Janitor Service 2025-03-23 17:31:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1764
Comment 16 Christoph Cullmann 2025-04-13 12:34:00 UTC
Git commit f9fcdef19d24dda30fb38b71e1291a45fdb8aa1b by Christoph Cullmann.
Committed on 13/04/2025 at 12:33.
Pushed by cullmann into branch 'master'.

add menu to switch between Windows

M  +2    -1    apps/lib/data/kateui.rc
M  +2    -18   apps/lib/kateapp.cpp
M  +9    -0    apps/lib/kateapp.h
M  +78   -0    apps/lib/katemainwindow.cpp
M  +6    -0    apps/lib/katemainwindow.h

https://invent.kde.org/utilities/kate/-/commit/f9fcdef19d24dda30fb38b71e1291a45fdb8aa1b