add menu to switch between Windows

BUG: 499272